@@ -3,6 +3,7 @@
   * removed outdated and unnecessary files
   * added --command flag to "run docker" to run a specific command such as
     ck run docker:xyz --command="ck show env"
+  * auto-install Python requirements from pulled repositories
 
 * V2.4.0
   * added module "docker.template" to support adaptive CK containers
